@@ -394,6 +394,7 @@ enum text_object_type {
 #ifdef HDDTEMP
 	OBJ_hddtemp,
 #endif /* HDDTEMP */
+	OBJ_to_bytes,
 	OBJ_scroll,
 	OBJ_combine,
 	OBJ_entropy_avail,
